--- a/lmnad/templates/lmnad/amrk.html
+++ b/lmnad/templates/lmnad/amrk.html
@@ -1,8 +1,8 @@
 {% extends 'lmnad/base.html' %}
 
 {% block content %}
-<h3 class="page-header">IGWResearch</h3>
+<h3 class="page-header">AMRK</h3>
     <p>
-        {{ igwresearch.text | safe }}
+        {{ amrk.text | safe }}
     </p>
 {% endblock %}
