--- a/lmnad/templates/lmnad/contacts.html
+++ b/lmnad/templates/lmnad/contacts.html
@@ -1,9 +1,8 @@
 {% extends 'lmnad/base.html' %}
-{% load markup_tags %}
 
 {% block content %}
 <h3 class="page-header">Контакты</h3>
     <h4>
-        {{ contacts.text | apply_markup:"markdown" }}
+        {{ contacts.text | safe  }}
     </h4>
 {% endblock %}
