--- a/lmnad/templates/lmnad/events.html
+++ b/lmnad/templates/lmnad/events.html
@@ -1,12 +1,11 @@
 {% extends 'lmnad/base.html' %}
-{% load markup_tags %}
 
 {% block content %}
 <h3 class="page-header">События</h3>
     {% for event in events|dictsortreversed:"date" %}
         <h3>{{ event.title }}</h3>
         <p>
-            {{ event.text | apply_markup:"markdown" }}
+            {{ event.text | safe  }}
             <br>
             <small><b>{{ event.date }}</b></small>
         </p>
