--- a/lmnad/templates/lmnad/base.html
+++ b/lmnad/templates/lmnad/base.html
@@ -6,7 +6,7 @@
     <title>LMNAD</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="demo_icon.gif" type="image/gif" sizes="16x16">
+    <link rel="icon" href="{% static 'lmnad/favicon.ico' %}" type="image/gif">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/yeti/bootstrap.min.css"-->
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/spacelab/bootstrap.min.css" rel="stylesheet" integrity="sha384-L/tgI3wSsbb3f/nW9V6Yqlaw3Gj7mpE56LWrhew/c8MIhAYWZ/FNirA64AVkB5pI" crossorigin="anonymous">
@@ -39,6 +39,7 @@
               <a href="#projects" class="dropdown-toggle" data-toggle="dropdown">Проекты <b class="caret"></b></a>
               <ul class="dropdown-menu">
                   <li><a href="{% url 'igwresearch' %}">IGWResearch</a></li>
+                  <li><a href="{% url 'amrk' %}">AMRK</a></li>
               </ul>
           </li>
           <li><a href="{% url 'events' %}">События</a></li>
