bugfix: fix title for pages

--- a/lmnad/templates/lmnad/amrk.html
+++ b/lmnad/templates/lmnad/amrk.html
@@ -1,7 +1,7 @@
 {% extends 'lmnad/base.html' %}
 
 {% block content %}
-<h3 class="page-header">AMRK</h3>
+<h3 class="page-header">{{amrk.title}}</h3>
     <p>
         {{ amrk.text | safe }}
     </p>
