--- a/lmnad/templates/lmnad/igwresearch.html
+++ b/lmnad/templates/lmnad/igwresearch.html
@@ -1,7 +1,7 @@
 {% extends 'lmnad/base.html' %}
 
 {% block content %}
-<h3 class="page-header">IGWResearch</h3>
+<h3 class="page-header">{{igwresearch.title}}</h3>
     <p>
         {{ igwresearch.text | safe }}
     </p>
