--- a/lmnad/templates/lmnad/contacts.html
+++ b/lmnad/templates/lmnad/contacts.html
@@ -1,8 +1,27 @@
 {% extends 'lmnad/base.html' %}
+{% load bootstrap_tags %}
 
 {% block content %}
 <h3 class="page-header">Контакты</h3>
     <h4>
         {{ contacts.text | safe  }}
     </h4>
+
+    <br>
+    <h4>Обратная связь:</h4>
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form.media }}
+        {{ form.non_field_errors }}
+        {% for field in form.visible_fields %}
+            <div class="control-group {{ field.html_name }} {% if field.errors %}error{% endif %}">
+                <label class="control-label">{{ field.label }}{% if field.field.required %} *{% endif %}</label>
+                <div>
+                    {{ field }}
+                    {% if field.errors %}<span class="help-inline">{{ field.errors.as_text }}</span>{% endif %}
+                </div>
+            </div>
+        {% endfor %}
+        <input type="submit" class="btn btn-primary" value="Отправить"/>
+</form>
 {% endblock %}
