--- a/lmnad/templates/lmnad/base.html
+++ b/lmnad/templates/lmnad/base.html
@@ -6,6 +6,7 @@
     <title>LMNAD</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="yandex-verification" content="814cc814a6791f9c" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/yeti/bootstrap.min.css"-->
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/spacelab/bootstrap.min.css" rel="stylesheet" integrity="sha384-L/tgI3wSsbb3f/nW9V6Yqlaw3Gj7mpE56LWrhew/c8MIhAYWZ/FNirA64AVkB5pI" crossorigin="anonymous">
@@ -30,17 +31,12 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
           <li><a href="{% url 'home' %}">Главная</a></li>
-          <li><a href="{% url 'people' %}">Люди</a></li>
+          <li><a href="{% url 'people' %}">Сотрудники</a></li>
           <li><a href="{% url 'articles' %}">Публикации</a></li>
+          <li><a href="{% url 'grants' %}">Гранты</a></li>
+          <li><a href="{% url 'projects' %}">Проекты</a></li>
           <li><a href="{% url 'seminars' %}">Семинары</a></li>
           <li><a href="{% url 'protections' %}">Защиты</a></li>
-          <li class="dropdown">
-              <a href="#projects" class="dropdown-toggle" data-toggle="dropdown">Проекты <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                  <li><a href="{% url 'igwresearch' %}">IGWResearch</a></li>
-                  <li><a href="{% url 'amrk' %}">AMRK</a></li>
-              </ul>
-          </li>
           <li><a href="{% url 'events' %}">События</a></li>
           <li><a href="{% url 'contacts' %}">Контакты</a></li>
       </ul>
