--- a/lmnad/templates/lmnad/people.html
+++ b/lmnad/templates/lmnad/people.html
@@ -1,7 +1,7 @@
 {% extends 'lmnad/base.html' %}
 
 {% block content %}
-    <h3 class="page-header">Текущий состав</h3>
+    <h3 class="page-header">Сотрудники лаборатории</h3>
   <table class="table table-hover">
     <thead>
         <tr>
@@ -10,12 +10,13 @@
             <th>Cтепень</th>
             <th>Учёное звание</th>
             <th>Должность</th>
+            <th>Science Index</th>
         </tr>
     </thead>
     <tbody>
-    {% for people in peoples %}
+    {% for people in peoples|dictsort:"order_by" %}
         <tr>
-            <th class="row">{{ people.id }}</th>
+            <th class="row">{{ people.order_by|add:"+1" }}</th>
             <td>
                 {% if people.account %}
                     <a href="{{ people.account.get_absolute_url }}">{{ people.fullname }}</a>
@@ -36,6 +37,11 @@
             <td>
                 {% if people.position %}
                     {{ people.position }}
+                {% endif %}
+            </td>
+            <td>
+                {% if people.science_index %}
+                    {{ people.science_index | safe  }}
                 {% endif %}
             </td>
         </tr>
