--- a/lmnad/templates/lmnad/protections.html
+++ b/lmnad/templates/lmnad/protections.html
@@ -1,7 +1,7 @@
 {% extends 'lmnad/base.html' %}
 
 {% block content %}
-<h3 class="page-header">Защиты</h3>
+<h3 class="page-header">Защиты квалификационных работ</h3>
     {% for protection in protections|dictsortreversed:"date" %}
         <h4>{{ protection.author }}</h4>
         <h3>{{ protection.title }}</h3>
