--- a/lmnad/templates/lmnad/seminars.html
+++ b/lmnad/templates/lmnad/seminars.html
@@ -1,11 +1,11 @@
 {% extends 'lmnad/base.html' %}
 
 {% block content %}
-<h3 class="page-header">Семинары</h3>
+<h3 class="page-header">Конференции, научные семинары, выставки</h3>
         {% for seminar in seminars|dictsortreversed:"date" %}
             <h3>{{ seminar.title }}</h3>
             <p>
-                {{ seminar.text | safe  }}
+                {{ seminar.text | safe }}
                 <br>
                 <small><b>{{ seminar.date }}</b></small>
             </p>
