--- a/lmnad/templates/lmnad/grants_detail.html
+++ b/lmnad/templates/lmnad/grants_detail.html
@@ -2,14 +2,36 @@
 
 {% block content %}
 <h3 class="page-header">{{ grant.name }}</h3>
-    <h4><b>Тип:</b> {{ grant.type }}</h4>
-    <h4><b>Номер:</b> {{ grant.number }}</h4>
-    <h4><b>Руководитель:</b> <a href="{{ grant.head.get_absolute_url }}">{{ grant.get_name_head }}</a></h4>
-    <h4><b>Участники:</b></h4>
-    {% for member in grant.members.all %}
-        <a href="{{ member.get_absolute_url }}">{{ member.get_name }}</a>
-    {% endfor %}
-    <h4>С {{ grant.date_start }} по {{ grant.date_end }}</h4>
-    <hr>
-    {{ grant.abstract | safe }}
+    <h5><b>Тип:</b> {{ grant.type }}</h5>
+    <h5><b>Номер:</b> {{ grant.number }}</h5>
+    <h5><b>Руководители:</b></h5>
+        {% for head in grant.head.all %}
+            {% if head.account %}
+                <a href="{{ head.get_absolute_url }}">{{ head}}</a><br>
+            {% else %}
+               {{ head }}<br>
+            {% endif %}
+        {% endfor %}
+    <h5><b>Участники:</b></h5>
+        {% for member in grant.members.all %}
+            {% if member.account %}
+                <a href="{{ member.get_absolute_url }}">{{ member }}</a><br>
+            {% else %}
+               {{ member }}<br>
+            {% endif %}
+        {% endfor %}
+    <h5>С {{ grant.date_start|date:"M. Y" }} по {{ grant.date_end|date:"M. Y" }}</h5>
+
+    {% if grant.reference %}
+        <a href="{{ grant.reference }}">Ссылка на грант</a><br>
+    {% endif %}
+
+    {% if grant.reference_result %}
+        <a href="{{ grant.reference_result  }}"> Ссылка на результаты конкурса </a><br>
+    {% endif %}
+
+    {% if grant.abstract %}
+         <hr>
+         {{ grant.abstract | safe }}
+    {% endif %}
 {% endblock %}
