--- a/lmnad/templates/lmnad/base.html
+++ b/lmnad/templates/lmnad/base.html
@@ -60,7 +60,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Лаборатория «Моделирования природных и техногенных катастроф © 2016»</p>
+  <p>Лаборатория моделирования природных и техногенных катастроф НГТУ им. Р.Е. Алексеева © 2016</p>
 </footer>
 
 </body>
