--- a/lmnad/templates/lmnad/seminars.html
+++ b/lmnad/templates/lmnad/seminars.html
@@ -2,15 +2,19 @@
 
 {% block content %}
 <h3 class="page-header">Конференции, научные семинары, выставки</h3>
-        {% for seminar in seminars|dictsortreversed:"date" %}
-            <h3>{{ seminar.title }}</h3>
-            <p>
-                {{ seminar.text | safe }}
+    {% for seminar in seminars|dictsortreversed:"date" %}
+        <h3>{{ seminar.title }}</h3>
+        <p>
+            {{ seminar.text | safe }}
+            {% if seminar.full_text %}
                 <br>
-                <small><b>{{ seminar.date }}</b></small>
-            </p>
-            <hr>
-        {% empty %}
-            <p>Нет ближайших семинаров</p>
-        {% endfor %}
+                <a href="{{ seminar.get_absolute_url }}"> Отчёт </a>
+            {% endif %}
+            <br>
+            <small><b>{{ seminar.date }}</b></small>
+        </p>
+        <hr>
+    {% empty %}
+        <p>Нет ближайших семинаров</p>
+    {% endfor %}
 {% endblock %}
