--- a/lmnad/templates/lmnad/thanks.html
+++ b/lmnad/templates/lmnad/thanks.html
@@ -1,7 +1,8 @@
 {% extends 'lmnad/base.html' %}
 {% load bootstrap_tags %}
+{% load i18n %}
 
 {% block content %}
-<h3 class="page-header">Спасибо!</h3>
-<h4>Ваше письмо отправлено!</h4>
+<h3 class="page-header">{% trans "Thank you" %}</h3>
+<h4>{% trans "Your letter has been sent" %}!</h4>
 {% endblock %}
