--- a/lmnad/templates/lmnad/base.html
+++ b/lmnad/templates/lmnad/base.html
@@ -1,4 +1,6 @@
 {% load staticfiles %}
+{% load i18n %}
+
 <!DOCTYPE html>
 </head>
 <html lang="en">
@@ -14,6 +16,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="{% static 'lmnad/app.js' %}"></script>
+    <script src="{% static 'lmnad/lang.js' %}"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -30,24 +33,46 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-          <li><a href="{% url 'home' %}">Главная</a></li>
-          <li><a href="{% url 'people' %}">Сотрудники</a></li>
-          <li><a href="{% url 'articles' %}">Публикации</a></li>
-          <li><a href="{% url 'grants' %}">Гранты</a></li>
-          <li><a href="{% url 'projects' %}">Проекты</a></li>
-          <li><a href="{% url 'seminars' %}">Семинары</a></li>
-          <li><a href="{% url 'protections' %}">Защиты</a></li>
-          <li><a href="{% url 'events' %}">События</a></li>
-          <li><a href="{% url 'contacts' %}">Контакты</a></li>
+          <li><a href="{% url 'home' %}"> {% trans "Home" %} </a></li>
+          <li><a href="{% url 'people' %}"> {% trans "People" %} </a></li>
+          <li><a href="{% url 'articles' %}"> {% trans "Publication" %} </a></li>
+          <li><a href="{% url 'grants' %}"> {% trans "Grants" %} </a></li>
+          <li><a href="{% url 'projects' %}"> {% trans "Products" %} </a></li>
+          <li><a href="{% url 'seminars' %}"> {% trans "Seminars" %} </a></li>
+          <li><a href="{% url 'protections' %}"> {% trans "Protections" %} </a></li>
+          <li><a href="{% url 'events' %}"> {% trans "Events" %} </a></li>
+          <li><a href="{% url 'contacts' %}"> {% trans "Contacts" %} </a></li>
       </ul>
-
       <ul class="nav navbar-nav navbar-right">
+          <li>
+              <a>
+              <form action="{% url 'set_language' %}" method="post">
+                {% csrf_token %}
+                <input name="next" type="hidden" value="{{ request.get_full_path|slice:'3:' }}" />
+                <ul class="nav navbar-nav navbar-right language menu">
+                    {% get_current_language as LANGUAGE_CODE %}
+                    {% get_available_languages as LANGUAGES %}
+                    {% get_language_info_list for LANGUAGES as languages %}
+                    {% for language in languages %}
+                        <li>
+                            <button type="submit"
+                                    name="language"
+                                    value="{{ language.code }}"
+                                    class="{% if language.code == LANGUAGE_CODE %}selected{% endif %}">
+                                {{ language.name_local }}
+                            </button>
+                        </li>
+                    {% endfor %}
+                </ul>
+              </form>
+              </a>
+          </li>
       {% if user.is_authenticated %}
           <li><a href="{{ user.get_absolute_url }}">{{ user }}</a></li>
-          <li><a href="{% url 'logout' %}">Выйти</a></li>
+          <li><a href="{% url 'logout' %}">{% trans "Log out" %}</a></li>
       {% else %}
-          <li><a href="{% url 'register' %}">Регистрация</a></li>
-          <li><a href="{% url 'login' %}">Вход</a></li>
+          <li><a href="{% url 'register' %}">{% trans "Sign up" %}</a></li>
+          <li><a href="{% url 'login' %}">{% trans "Log in" %}</a></li>
       {% endif %}
       </ul>
     </div>
@@ -60,8 +85,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Лаборатория моделирования природных и техногенных катастроф НГТУ им. Р.Е. Алексеева © 2016</p>
+  <p>{% trans "Laboratory of Modeling of Natural and Anthropogenic Disasters, NNSTU n.a. R.E. Alekseev  © 2016" %} </p>
 </footer>
-
 </body>
 </html>
