--- a/lmnad/templates/lmnad/contacts.html
+++ b/lmnad/templates/lmnad/contacts.html
@@ -1,14 +1,15 @@
 {% extends 'lmnad/base.html' %}
 {% load bootstrap_tags %}
+{% load i18n %}
 
 {% block content %}
-<h3 class="page-header">Контакты</h3>
+<h3 class="page-header">{% trans "Contacts" %}</h3>
     <h4>
         {{ contacts.text | safe  }}
     </h4>
 
     <br>
-    <h4>Обратная связь:</h4>
+    <h4> {% trans "Feedback Form:" %} </h4>
     <form action="" method="post">
         {% csrf_token %}
         {{ form.media }}
