--- a/lmnad/templates/lmnad/edit_profile.html
+++ b/lmnad/templates/lmnad/edit_profile.html
@@ -1,8 +1,9 @@
 {% extends 'lmnad/base.html' %}
 {% load bootstrap_tags %}
+{% load i18n %}
 
 {% block content %}
-<h3 class="page-header">Редактирование персональной страницы</h3>
+<h3 class="page-header"> {% trans "Edit profile" %} </h3>
     <form action="" method="post">
         {% csrf_token %}
         {{ form.media }}
@@ -17,6 +18,6 @@
                 </label>
             </div>
         {% endfor %}
-        <input type="submit" class="btn btn-primary" value="Сохранить"/>
+        <input type="submit" class="btn btn-primary" value="{% trans "Save" %}"/>
     </form>
 {% endblock %}
