--- a/lmnad/templates/lmnad/events.html
+++ b/lmnad/templates/lmnad/events.html
@@ -1,7 +1,8 @@
 {% extends 'lmnad/base.html' %}
+{% load i18n %}
 
 {% block content %}
-<h3 class="page-header">События</h3>
+<h3 class="page-header">{% trans "Events" %}</h3>
     {% for event in events|dictsortreversed:"date" %}
         {% if event.full_text %}
             <h3><a href="{{ event.get_absolute_url }}"> {{ event.title }} </a></h3>
@@ -15,6 +16,6 @@
         </p>
         <hr>
     {% empty %}
-        <p>Нет ближайших событий</p>
+        <p>{% trans "No events" %}</p>
     {% endfor %}
 {% endblock %}
