--- a/lmnad/templates/lmnad/register.html
+++ b/lmnad/templates/lmnad/register.html
@@ -1,11 +1,12 @@
 {% extends 'lmnad/base.html' %}
 {% load bootstrap_tags %}
+{% load i18n %}
 
 {% block content %}
-<h3 class="page-header">Регистрация</h3>
+<h3 class="page-header">{% trans "Registration" %}</h3>
     <form action="" method="post">
       {% csrf_token %}
       {{ form|as_bootstrap }}
-      <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
+      <button type="submit" class="btn btn-primary">{% trans "Sign up" %}</button>
     </form>
 {% endblock %}
