Bugfix - Products to Projects

--- a/lmnad/templates/lmnad/base.html
+++ b/lmnad/templates/lmnad/base.html
@@ -37,7 +37,7 @@
           <li><a href="{% url 'people' %}"> {% trans "People" %} </a></li>
           <li><a href="{% url 'articles' %}"> {% trans "Publication" %} </a></li>
           <li><a href="{% url 'grants' %}"> {% trans "Grants" %} </a></li>
-          <li><a href="{% url 'projects' %}"> {% trans "Products" %} </a></li>
+          <li><a href="{% url 'projects' %}"> {% trans "Projects" %} </a></li>
           <li><a href="{% url 'seminars' %}"> {% trans "Seminars" %} </a></li>
           <li><a href="{% url 'protections' %}"> {% trans "Protections" %} </a></li>
           <li><a href="{% url 'events' %}"> {% trans "Events" %} </a></li>
