Bugfix - Products to Projects

--- a/lmnad/templates/lmnad/projects.html
+++ b/lmnad/templates/lmnad/projects.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block content %}
-<h3 class="page-header">{% trans "Products" %}</h3>
+<h3 class="page-header">{% trans "Projects" %}</h3>
     {% for project in projects %}
         <h3><a href="{{ project.get_absolute_url }}">{{ project.title }}</a></h3>
         <p>
