--- a/igwatlas/templates/igwatlas/base.html
+++ b/igwatlas/templates/igwatlas/base.html
@@ -1,10 +1,64 @@
+{% load staticfiles %}
+{% load i18n %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>IGWAtlas</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="yandex-verification" content="814cc814a6791f9c" />
+
+    <!-- css files -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <style>
+        body, html {
+            padding: 0;
+            margin: 0;
+            width: 100%;
+            height: 100%;
+        }
+        #map {
+            width: 100%;
+            height: 90%;
+            padding-top: 120px;
+            padding-left: 50px;
+            padding-right: 50px;
+            padding-bottom: 10px;
+        }
+    </style>
+
+    <!-- scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="//api-maps.yandex.ru/2.1/?lang=en_RU" type="text/javascript"></script>
+    <script src="{% static 'igwatlas/igwatlas.js' %}"></script>
 </head>
 <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{% url 'igwatlas' %}">IGWAtlas</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li><a href="{% url 'map' %}"> {% trans "Map" %} </a></li>
+                <li><a href="{% url 'source' %}"> {% trans "Sources" %} </a></li>
+                <li><a href="{% url 'about' %}"> {% trans "About" %} </a></li>
+            </ul>
+        </div>
+    </nav>
 
+    {% block content %}
+    {% endblock %}
+
+    <!-- FOOTER -->
+    <footer class="container-fluid text-center">
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>© <a href="{% url 'home' %}">LMNAD</a> 2017 </p>
+    </footer>
 </body>
 </html>
