Feature - igwatlas interface

--- a/igwatlas/templates/igwatlas/about.html
+++ b/igwatlas/templates/igwatlas/about.html
@@ -3,5 +3,7 @@
 {% load i18n %}
 
 {% block content %}
-    About
+    <div class="container">
+        <h3 class="page-header"> {% trans "About" %} </h3>
+    </div>
 {% endblock %}
