--- a/igwatlas/templates/igwatlas/base.html
+++ b/igwatlas/templates/igwatlas/base.html
@@ -12,19 +12,16 @@
     <!-- css files -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <style>
-        body, html {
-            padding: 0;
-            margin: 0;
-            width: 100%;
-            height: 100%;
-        }
-        #map {
-            width: 100%;
-            height: 90%;
-            padding-top: 120px;
-            padding-left: 50px;
-            padding-right: 50px;
-            padding-bottom: 10px;
+        .jumbotron {
+            background-image: url("{% static 'igwatlas/WestCentralAfrica_f7.png' %}");
+            background-color: #17234E;
+            margin-bottom: 0;
+            min-height: 50%;
+            background-repeat: no-repeat;
+            background-position: center;
+            -webkit-background-size: cover;
+            background-size: cover;
+            color: #ffffff;
         }
     </style>
 
@@ -38,6 +35,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
@@ -57,6 +55,7 @@
 
     <!-- FOOTER -->
     <footer class="container-fluid text-center">
+        <p class="pull-left"><a href="{% url 'home' %}">Back to LMNAD</a></p>
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>© <a href="{% url 'home' %}">LMNAD</a> 2017 </p>
     </footer>
