--- a/igwatlas/templates/igwatlas/sources.html
+++ b/igwatlas/templates/igwatlas/sources.html
@@ -3,5 +3,9 @@
 {% load i18n %}
 
 {% block content %}
-    Table of source, several page, search
+    <div class="container" style="margin-top:50px">
+        <div class="row">
+            <h3 class="page-header"> {% trans "Sources" %} </h3>
+        </div>
+    </div>
 {% endblock %}
