--- a/igwatlas/templates/igwatlas/about.html
+++ b/igwatlas/templates/igwatlas/about.html
@@ -3,7 +3,9 @@
 {% load i18n %}
 
 {% block content %}
-    <div class="container">
-        <h3 class="page-header"> {% trans "About" %} </h3>
+    <div class="container" style="margin-top:50px">
+        <div class="row">
+            <h3 class="page-header"> {% trans "About" %} </h3>
+        </div>
     </div>
 {% endblock %}
