--- a/igwatlas/templates/igwatlas/base.html
+++ b/igwatlas/templates/igwatlas/base.html
@@ -11,6 +11,7 @@
 
     <!-- css files -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
     <style>
         .jumbotron {
             background-image: url("{% static 'igwatlas/WestCentralAfrica_f7.png' %}");
@@ -23,6 +24,11 @@
             background-size: cover;
             color: #ffffff;
         }
+
+        #map {
+            width:100%;
+            height:500px
+        }
     </style>
 
     <!-- scripts -->
@@ -30,23 +36,26 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="//api-maps.yandex.ru/2.1/?lang=en_RU" type="text/javascript"></script>
     <script src="{% static 'igwatlas/igwatlas.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{% url 'igwatlas' %}">IGWAtlas</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-                <li><a href="{% url 'map' %}"> {% trans "Map" %} </a></li>
-                <li><a href="{% url 'source' %}"> {% trans "Sources" %} </a></li>
-                <li><a href="{% url 'about' %}"> {% trans "About" %} </a></li>
-            </ul>
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{% url 'igwatlas' %}">IGWAtlas</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li><a href="{% url 'map' %}"> {% trans "Map" %} </a></li>
+                    <li><a href="{% url 'source' %}"> {% trans "Sources" %} </a></li>
+                    <li><a href="{% url 'about' %}"> {% trans "About" %} </a></li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -54,7 +63,7 @@
     {% endblock %}
 
     <!-- FOOTER -->
-    <footer class="container-fluid text-center">
+    <footer class="container text-center">
         <p class="pull-left"><a href="{% url 'home' %}">Back to LMNAD</a></p>
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>© <a href="{% url 'home' %}">LMNAD</a> 2017 </p>
