--- a/igwatlas/templates/igwatlas/igwatlas.html
+++ b/igwatlas/templates/igwatlas/igwatlas.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-sm-4">
           <h3>{% trans "Sources" %}</h3>
-          <p>{% trans 'Database contains about 190 sources' %}</p>
+          <p>{% trans 'Database contains' %} {{ count_sources }} {%trans 'sources' %}</p>
           <p>{% trans 'All data have references to sources' %}</p>
           <p><a class="btn btn-default" href="{% url 'source' %}" role="button">{% trans 'View details »'%}</a></p>
         </div>
@@ -25,8 +25,8 @@
         </div>
         <div class="col-sm-4">
           <h3>{% trans "Observations" %}</h3>
-          <p>{% trans '922 - number of observation in database' %}</p>
-          <p>{% trans 'Dates: From the 1960s to 2015' %}</p>
+          <p> {{ count_observation }} - {% trans 'number of observation in database' %}</p>
+          <p>{% trans 'Years in DB: ' %}  {{ min_date|date:"Y" }} -  {{ max_date|date:"Y" }} </p>
         </div>
       </div>
     </div>
@@ -35,8 +35,8 @@
       <hr class="featurette-divider">
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Satellite</h2>
-          <p class="lead">Types</p>
+          <h2 class="featurette-heading">{{ page_data_satellite.title }}</h2>
+          <p class="lead">{{ page_data_satellite.text|safe }}</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" data-src="{% static 'igwatlas/SuluSea2_Figure14.jpg' %}" alt="500x500" src="{% static 'igwatlas/SuluSea2_Figure14.jpg' %}" data-holder-rendered="true">
@@ -46,8 +46,8 @@
       <hr class="featurette-divider">
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Map</h2>
-          <p class="lead">Types</p>
+          <h2 class="featurette-heading">{{ page_data_map.title }}</h2>
+          <p class="lead">{{ page_data_map.text|safe }}</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="featurette-image img-responsive center-block" data-src="{% static 'igwatlas/SouthChinaSea_Bathymetry.jpg' %}" alt="500x500" src="{% static 'igwatlas/SouthChinaSea_Bathymetry.jpg' %}" data-holder-rendered="true">
@@ -57,8 +57,8 @@
       <hr class="featurette-divider">
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Graphic</h2>
-          <p class="lead">Types</p>
+           <h2 class="featurette-heading">{{ page_data_graphic.title }}</h2>
+           <p class="lead">{{ page_data_graphic.text|safe }}</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" data-src="{% static 'igwatlas/2010-Nicole_C-internal waves_Saint_John_f8.png' %}" alt="500x500" src="{% static 'igwatlas/2010-Nicole_C-internal waves_Saint_John_f8.png' %}" data-holder-rendered="true">
@@ -68,8 +68,8 @@
       <hr class="featurette-divider">
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Table</h2>
-          <p class="lead">Types</p>
+           <h2 class="featurette-heading">{{ page_data_table.title }}</h2>
+           <p class="lead">{{ page_data_table.text|safe }}</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="featurette-image img-responsive center-block" data-src="{% static 'igwatlas/2001-Dokken-coast_norwey_f3.png' %}" alt="500x500" src="{% static 'igwatlas/2001-Dokken-coast_norwey_f3.png' %}" data-holder-rendered="true">
@@ -79,8 +79,8 @@
       <hr class="featurette-divider">
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Record</h2>
-          <p class="lead">Types</p>
+           <h2 class="featurette-heading">{{ page_data_record.title }}</h2>
+           <p class="lead">{{ page_data_record.text|safe}}</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" data-src="{% static 'igwatlas/CaliforniaPacific_Figure2.jpg' %}" alt="500x500" src="{% static 'igwatlas/CaliforniaPacific_Figure2.jpg' %}" data-holder-rendered="true">
