--- a/igwatlas/templates/igwatlas/map.html
+++ b/igwatlas/templates/igwatlas/map.html
@@ -27,7 +27,7 @@
                             <div class="form-group">
                                 <label for="id_label_types">
                                     Select types
-                                    <select class="js-example-basic-multiple" id="id_label_types" multiple="multiple" style="width: 100%">
+                                    <select class="types_multiple" id="id_label_types" multiple="multiple" style="width: 100%">
                                         <option value="0">{% trans "Map" %}</option>
                                         <option value="1">{% trans "Graphic" %}</option>
                                         <option value="2">{% trans "Satellite" %}</option>
@@ -37,10 +37,10 @@
                                 </label>
                             </div>
                             <div class="form-group">
-                                <label for="id_label_date_from">
+                                <label for="date_from">
                                     {% trans "Select date from" %}
-                                    <div class="input-group date" data-provide="datepicker" data-date-format="yyyy/mm/dd" style="width: 35%;">
-                                        <input id="id_label_dates" type="text" class="form-control">
+                                    <div class="input-group date" data-provide="datepicker" data-date-format="yyyy-mm-dd" style="width: 35%;">
+                                        <input id="date_from" type="text" class="form-control">
                                         <div class="input-group-addon">
                                             <span class="glyphicon glyphicon-th"></span>
                                         </div>
@@ -48,10 +48,10 @@
                                 </label>
                             </div>
                             <div class="form-group">
-                                <label for="id_label_date_to">
+                                <label for="date_to">
                                     {% trans "Select date to" %}
-                                    <div class="input-group date" data-provide="datepicker" data-date-format="yyyy/mm/dd" style="width: 35%;">
-                                        <input id="id_label_date_to" type="text" class="form-control">
+                                    <div class="input-group date" data-provide="datepicker" data-date-format="yyyy-mm-dd" style="width: 35%;">
+                                        <input id="date_to" type="text" class="form-control">
                                         <div class="input-group-addon">
                                             <span class="glyphicon glyphicon-th"></span>
                                         </div>
@@ -67,7 +67,7 @@
                         </form>
                       </div>
                       <div class="modal-footer">
-                          <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Close" %}</button>
+                          <button id='search_cancel' type="button" class="btn btn-default" data-dismiss="modal">{% trans "Close and clear" %}</button>
                           <button id='search_btn' type="button" class="btn btn-primary" data-dismiss="modal">{% trans "Search" %}</button>
                       </div>
                     </div>
