Feature - translate igwatlas app

--- a/igwatlas/templates/igwatlas/map.html
+++ b/igwatlas/templates/igwatlas/map.html
@@ -26,7 +26,7 @@
                         <form class="form">
                             <div class="form-group">
                                 <label for="id_label_types">
-                                    Select types
+                                    {% trans 'Select types' %}
                                     <select class="types_multiple" id="id_label_types" multiple="multiple" style="width: 100%">
                                         <option value="0">{% trans "Map" %}</option>
                                         <option value="1">{% trans "Graphic" %}</option>
