--- a/igwatlas/templates/igwatlas/sources.html
+++ b/igwatlas/templates/igwatlas/sources.html
@@ -10,8 +10,8 @@
             <table class="table table-bordered">
                 <thead>
                     <tr>
-                        <th>Short</th>
-                        <th>Full</th>
+                        <th>{% trans 'Short description'%}</th>
+                        <th>{% trans 'Full description'%}</th>
                     </tr>
                 </thead>
                 <tbody>
