--- a/igwatlas/templates/igwatlas/sources.html
+++ b/igwatlas/templates/igwatlas/sources.html
@@ -6,7 +6,19 @@
     <div class="container" style="margin-top:50px">
         <div class="row">
             <h3 class="page-header"> {% trans "Sources" %} </h3>
-
+        </div>
+        <div class="row">
+            <div class="text-center">
+                    <form class="form-inline" action="/igwatlas_source" method="get">
+                        <div class="form-group">
+                          <input type="text" class="form-control" id="query" placeholder="{% trans 'Enter query' %}" name="query">
+                        </div>
+                        <button type="submit" class="btn btn-default">{% trans 'Search' %}</button>
+                    </form>
+                </div>
+            <br>
+        </div>
+        <div class="row">
             <table class="table table-bordered">
                 <thead>
                     <tr>
