--- a/lmnad/templates/lmnad/articles.html
+++ b/lmnad/templates/lmnad/articles.html
@@ -2,16 +2,32 @@
 {% load i18n %}
 
 {% block content %}
-<h3 class="page-header"> {% trans "Publications" %} </h3>
-    {% for article in articles|dictsortreversed:"year"%}
-        <h3>{{ article.title }}</h3>
-        <h4>{{ article.authors }}</h4>
-        <p>
-            {{ article.source }}
-            <a href="{{ article.link }}"> {% trans "Download" %} </a>
-            <br>
-            <small><b>{{ article.year }}</b></small>
-        </p>
-        <hr>
-    {% endfor %}
+     <div class="row">
+            <h3 class="page-header"> {% trans "Publications" %} </h3>
+     </div>
+
+     <div class="row">
+         <div class="text-center">
+                 <form class="form-inline" action="/articles" method="get">
+                     <div class="form-group">
+                       <input type="text" class="form-control" id="query" placeholder="{% trans 'Enter query' %}" name="query">
+                     </div>
+                     <button type="submit" class="btn btn-primary">{% trans 'Search' %}</button>
+                 </form>
+             </div>
+         <br>
+     </div>
+    <div class="row">
+        {% for article in articles|dictsortreversed:"year"%}
+            <h3>{{ article.title }}</h3>
+            <h4>{{ article.authors }}</h4>
+            <p>
+                {{ article.source }}
+                <a href="{{ article.link }}"> {% trans "Download" %} </a>
+                <br>
+                <small><b>{{ article.year }}</b></small>
+            </p>
+            <hr>
+        {% endfor %}
+    </div>
 {% endblock %}
