--- a/lmnad/templates/lmnad/events.html
+++ b/lmnad/templates/lmnad/events.html
@@ -10,6 +10,7 @@
             <h3>{{ event.title }}</h3>
         {% endif %}
         <p>
+            text
             {{ event.text | safe  }}
             <br>
             <small><b>{{ event.date }}</b></small>
